[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://Ball/ball.png" type="Texture" id=2]
[ext_resource path="res://Ball/hitBouncePad.wav" type="AudioStream" id=3]
[ext_resource path="res://Ball/hitWall.wav" type="AudioStream" id=4]
[ext_resource path="res://Ball/hitBrick.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="Ball" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HitBrick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HitBouncePad" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="HitWall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
